--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,30 +11,16 @@ header .header{
     color: aliceblue;
     align-items: center;
 }
+.navbar{
+    display: flex;
+}
+.navbar h1{
+    align-items: center;
+}
 .header img{
-    margin-left: 1rem;
     width: 4rem;
     border-radius: 2rem;
     height: 4rem;
     display: flex;
     align-items: center;
 }
-.oracion h1{
-    margin-top: 1rem;
-    margin-left: 6rem;
-    font-size: 65px;
-}
-
-.oracion p{
-    margin-top: 1rem;
-    margin-left: 6rem;
-    font-size: 20px;
-}
-.oracion h3{
-    margin-top: 1rem;
-    margin-left: 6rem;
-    font-size: 65px;
-    text-align: right;
-}
-
-
