--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 *{
     margin: 0;
+    font-weight: 100;
 }
 
 header .header{
@@ -7,20 +8,85 @@ header .header{
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
-    height: 50rem;
+    height: 40rem;
     color: aliceblue;
     align-items: center;
 }
 .navbar{
     display: flex;
+
+    justify-content: space-between;
+    font-size: 15px;
 }
-.navbar h1{
+.navbar p{
     align-items: center;
+    font-weight: 100;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    
 }
 .header img{
     width: 4rem;
     border-radius: 2rem;
+    margin-top: 4rem;
+    margin-left: 6rem;
     height: 4rem;
     display: flex;
     align-items: center;
+}
+.navbar .eslogan {
+    justify-content: end;
+    margin-top: 5rem;
+    margin-right: 2rem;
+}
+
+.header .oracion{
+    font-size: 55px;
+    margin-top: 4rem;
+    margin-left: 7.6rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.header .oracion .p p{
+    margin-top: 2rem;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.get-started button{
+    margin-left: 7.6rem;
+    margin-top: 3rem;
+    background-color: aqua;
+    border-radius: 3rem;
+    width: 9rem;
+    height: 3rem;
+    font-size: 1rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.letters-mid{
+    height: 5rem;
+}
+.letters-mid h1{
+  margin-top: 5.5rem;
+  text-align: center;
+  font-size: 2.7rem;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.photos-mid{
+ display: flex;   
+ justify-content: space-evenly;
+}
+
+.title-mid{
+    display: flex;   
+    justify-content: space-evenly;
+    font-family:  Arial, sans-serif;
+    font-weight: normal;
+   }
+
+.description{
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+    margin-top: 0.3rem;
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
