--- a/styles/styles.css
+++ b/styles/styles.css
@@ -136,7 +136,6 @@ header .header{
 
 
 
-
 .taper-low{
     display: flex;
    height:  100%;
@@ -174,4 +173,112 @@ header .header{
     margin-left: 0.2rem;
     font-size: 22px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.pricings{
+    justify-content: center;
+    text-align: center;
+    margin-top: 4rem;
+}
+.pricings h2{
+    font-size: 3.3rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.line-pricinge{
+    margin-top: 3rem;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+
+.price1 h5{
+    font-size: 2rem;
+    margin-top: 2rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.price1 h6{
+    font-size: 1.2rem;
+    
+}
+.price1 h6 big{
+    font-size: 5rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+}
+
+.price1 p{
+    font-size: 1.2rem;
+    margin-top: 1rem;
+}
+
+
+
+.price2{
+    background-color: aqua;
+    border-radius: 5px;
+    width: 20rem;
+    height: 27rem;
+    color: white;
+}
+
+.price2 h5{
+    font-size: 2rem;
+    margin-top: 2rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.price2 h6{
+    font-size: 1.2rem;
+}
+.price2 h6 big{
+    font-size: 5rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+}
+
+.price2 p{
+    font-size: 1.2rem;
+    margin-top: 1rem;
+}
+
+
+.price3 h5{
+    font-size: 2rem;
+    margin-top: 2rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
+}
+.price3 h6{
+    font-size: 1.2rem;
+}
+.price3 h6 big{
+    font-size: 5rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+}
+
+.price3 p{
+    font-size: 1.2rem;
+    margin-top: 1rem;
+}
+
+
+.Get-Free button{
+    margin-left: 0.2rem;
+    margin-top: 3rem;
+    background-color: rgb(0, 17, 255);
+    border-radius: 3rem;
+    width: 9rem;
+    height: 2.5rem;
+    font-size: 1rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.Get-Free1 button{
+    margin-left: 0.2rem;
+    margin-top: 3rem;
+    background-color: rgb(255, 0, 0);
+    border-radius: 3rem;
+    width: 9rem;
+    height: 2.5rem;
+    font-size: 1rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
